#                                                                                                          #
############################################################################################################


For more details, please see the README file.


July 10, 2022, AnnotSV version 3.1.2
	- fix: Add important bugfix concerning the GRCh38 coordinates of the morbid genes
	- fix: Add bugfix concerning some Overlapped_CDS_percent values


November 25, 2021, AnnotSV version 3.1.1
	- Add bugfix when setting the ANNOTSV global environmental variable with a final "/"
	- Update the documentation, add of the AnnotSV logo

November 08, 2021, AnnotSV version 3.1
	- Change the -genomeBuild default value to "GRCh38" (instead of GRCh37)
	- Use boolean values (instead of "yes"/"no") for the following option values: -candidateGenesFiltering, -includeCI, -overwrite, -reciprocal, -REreport, -REselect1 and -REselect2
	- Add the Children’s Mercy Research Institute Benign SV annotations (n=502 WGS)
	- Add the GenCC database for Gene-Disease relationship annotations
	- Add CytoBand annotation
	- Add novel regulatory element annotation:
		- Add miRNA annotation (from miRTargetLink)
		- Complete the RE_gene column output (the regulated gene name is detailed with more information: candidate gene annotation 
		and data sources (RefSeq, ENSEMBL, EnhancerAtlas, GeneHancer and/or miRTargetLink))
		- Add the "-REselect1" and "-REselect2" options to filter the RE_gene output
	- Update the benign SV annotation method:
		- Add the "-benignAF" option to change the allele frequency threshold used to select the benign SV in the data sources
		- Add 4 annotation columns: B_gain_AFmax, B_loss_AFmax, B_ins_AFmax and B_inv_AFmax (maximum allele frequency of the reported benign genomic regions)
	- Add new details in the"AnnotSV_ranking_criteria" output column: (i) detailed scoring points and (ii) remove gene names redundancy