@@ -73,7 +73,6 @@ source $g_AnnotSV(tclDir)/AnnotSV-clingen.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-config.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-cosmic.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-cytoband.tcl
-source $g_AnnotSV(tclDir)/AnnotSV-ddd.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-encodeblacklist.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-exac.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-exomiser.tcl
@@ -180,8 +179,6 @@ checkGenCCgeneFile
 # Annotation with OMIM?
 checkOMIMfile
 checkMorbidfile
-# Annotation with DDD?
-checkDDDgeneFile
 # Annotation with HI (Haploinsufficiency)?
 checkHIfile
 # Annotation with ClinGen?
